@@ -1,3 +1,7 @@
+2010-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* vc-annotate.el (vc-annotate): Use vc-read-revision.
+
 2010-06-15  Glenn Morris  <rgm@gnu.org>
 
 	* calendar/appt.el (appt-time-msg-list): Doc fix.
